메이븐 폼 파일 변경.

--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.springframework.samples.spring</groupId>
-    <artifactId>spring-jpa-utility</artifactId>
-    <version>1.0.0.CI-SNAPSHOT</version>
+    <groupId>com.mullae.modulefactory.postcode</groupId>
+    <artifactId>mullae-modulefactory-postcode</artifactId>
+    <version>0.0.1.SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>Spring JPA Utility</name>
-    <url>http://www.springframework.org</url>
+    <name>mullae moduleFactory postcode</name>
     <properties>
         <maven.test.failure.ignore>true</maven.test.failure.ignore>
-        <spring.framework.version>3.0.6.RELEASE</spring.framework.version>
+        <spring.framework.version>3.2.5.RELEASE</spring.framework.version>
     </properties>
 
     <dependencies>
