--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.springapp</groupId>
-    <artifactId>springMVCSample</artifactId>
+    <groupId>mullae.module.postcode</groupId>
+    <artifactId>mullae-module-postcode</artifactId>
     <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>springMVCSample</name>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>우편번호찾기</name>
 
     <properties>
         <spring.version>3.2.0.RELEASE</spring.version>
