--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <url>https://github.com/modulefactory/postcode</url>
     </scm>
 
+    <!--
     <distributionManagement>
         <snapshotRepository>
             <id>sonatype-nexus-snapshots</id>
@@ -41,19 +42,13 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </plainPostCodeRepository>
     </distributionManagement>
+    -->
 
     <properties>
         <spring.version>3.2.5.RELEASE</spring.version>
     </properties>
 
     <dependencies>
-        <!-- Test -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
 
         <!-- JEE -->
         <dependency>
@@ -133,6 +128,13 @@
 
         <!-- Test -->
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.9.5</version>
@@ -172,6 +174,24 @@
             <version>1.8.0.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.27</version>
+        </dependency>
+
+        <!-- Util -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>0.6.2</version>
+        </dependency>
 
     </dependencies>
 
