--- a/pom.xml
+++ b/pom.xml
@@ -225,23 +225,21 @@
                     </includes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <!-- http port -->
+                    <port>9090</port>
+                    <!-- application path always starts with /-->
+                    <path>/postcode</path>
+                    <!-- URIEncoding -->
+                    <uriEncoding>UTF-8</uriEncoding>
+                    <!-- http://tomcat.apache.org/maven-plugin-2.2/run-mojo-features.html 참조 -->
+                </configuration>
+            </plugin>
         </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.tomcat.maven</groupId>
-                    <artifactId>tomcat7-maven-plugin</artifactId>
-                    <version>2.2</version>
-                    <configuration>
-                        <!-- http port -->
-                        <port>9090</port>
-                        <!-- application path always starts with /-->
-                        <path>/postcode</path>
-                        <!-- http://tomcat.apache.org/maven-plugin-2.2/run-mojo-features.html 참조 -->
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
 
     <profiles>
