--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,18 @@
             <version>3.0-alpha-1</version>
             <scope>provided</scope>
         </dependency>
-
+        <!--
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>javax.servlet.jsp-api</artifactId>
             <version>2.2.1</version>
             <scope>provided</scope>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
         </dependency>
 
         <!-- log -->
@@ -191,6 +197,13 @@
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
             <version>0.6.2</version>
+        </dependency>
+
+        <!-- Web -->
+        <dependency>
+            <groupId>org.mozilla</groupId>
+            <artifactId>rhino</artifactId>
+            <version>1.7R4</version>
         </dependency>
 
     </dependencies>
