--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <!--JSON-->
@@ -204,6 +205,13 @@
             <groupId>org.mozilla</groupId>
             <artifactId>rhino</artifactId>
             <version>1.7R4</version>
+        </dependency>
+
+        <!-- Dust -->
+        <dependency>
+            <groupId>framewise</groupId>
+            <artifactId>dustview</artifactId>
+            <version>0.1</version>
         </dependency>
 
     </dependencies>
