페이징 공통파라미터를 사용하도록 코드 수정함

--- a/pom.xml
+++ b/pom.xml
@@ -217,10 +217,16 @@
         <!-- framewise:Page -->
         <dependency>
             <groupId>framewise</groupId>
-            <artifactId>page</artifactId>
-            <version>0.1</version>
+            <artifactId>paging</artifactId>
+            <version>0.1-SNATPSHOT</version>
         </dependency>
 
+        <!-- Google App Engine -->
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-api-1.0-sdk</artifactId>
+            <version>1.8.8</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -230,8 +236,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
